feat: agregar columna de precio nómina en la tabla de servicios y actualizar el formulario correspondiente; ajustar lógica de parámetros en el servicio de ayuda

--- a/src/app/pages/configuracion/servicios/servicio-listado/servicio-listado.component.html
+++ b/src/app/pages/configuracion/servicios/servicio-listado/servicio-listado.component.html
@@ -73,6 +73,7 @@
                 <th class="bg-body-tertiary">#</th>
                 <th class="bg-body-tertiary">Descripcion</th>
                 <th class="bg-body-tertiary">Precio</th>
+                <th class="bg-body-tertiary">Precio nomina</th>
                 <th class="bg-body-tertiary"></th>
               </tr>
             </thead>
@@ -91,6 +92,9 @@
                 </td>
                 <td>
                   <span>{{ Servicio.precio }}</span>
+                </td>
+                <td>
+                  <span>{{ Servicio.precio_nomina }}</span>
                 </td>
                 <td>
                   <div class="d-flex flex-direction">
