feat: actualizar lógica de estados de pago y validaciones en componentes de factura y pedido

--- a/src/app/pages/factura/factura-editar/factura-editar.component.html
+++ b/src/app/pages/factura/factura-editar/factura-editar.component.html
@@ -37,7 +37,7 @@
               <c-col>
                 <div
                   class="small text-body-secondary mt-3 border p-4"
-                  [class.hasPago]="estadosPagos[j]"
+                  [class.hasPago]="validarEstadoPago(j, numberValue(this.Id))"
                 >
                   <div
                     class="d-flex align-items-center justify-content-between mb-4"
