--- a/src/app/pages/factura/factura-insertar2/factura-insertar2.component.html
+++ b/src/app/pages/factura/factura-insertar2/factura-insertar2.component.html
@@ -43,26 +43,35 @@
         </c-card-header>
         <c-card-body class="pt-4">
           <c-container [fluid]="true" class="px-0">
-            <c-row
-              class="mb-4"
-              *ngFor="let empFactura of empleado.facturas?.[0]?.factura_detalle || [] ; let j = index"
-            >
-              <c-col>
+            <div class="accordion" [attr.id]="'accordion-' + empleado.id">
+              <div
+                class="accordion-item"
+                *ngFor="let empFactura of empleado.facturas?.[0]?.factura_detalle || []; let j = index"
+              >
                 <div
-                  class="small text-body-secondary mt-3 border p-4"
-                  [class.hasPago]="
-                    validarEstadoPago(j, numberValue(empleado.id))
-                  "
+                  [attr.id]="'heading-' + empleado.id + '-' + j"
+                  class="d-flex justify-content-between align-items-center accordion-header"
                 >
-                  <div
-                    class="d-flex justify-content-between align-items-center"
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    [attr.data-bs-toggle]="'collapse'"
+                    [attr.data-bs-target]="'#collapse-' + empleado.id + '-' + j"
+                    [attr.aria-expanded]="'false'"
+                    [attr.aria-controls]="'collapse-' + empleado.id + '-' + j"
+                    [ngClass]="{
+                      hasPago: validarEstadoPago(j, numberValue(empleado.id)),
+                      notHasPago: !validarEstadoPago(
+                        j,
+                        numberValue(empleado.id)
+                      )
+                    }"
                   >
                     <div class="d-flex align-items-center">
                       <p class="h5 text-info">
                         Cliente: {{ empFactura.cliente?.nombre }}
                         {{ empFactura.cliente?.apellido }}
                       </p>
-
                       <span
                         class="ms-3 pointer"
                         (click)="
@@ -80,28 +89,45 @@
                         ></svg>
                       </span>
                     </div>
-                    <span class="ms-3">
+                    <span class="ms-3 text-muted">
                       <strong>Fecha:</strong>
                       {{ empFactura.created_at | date : "dd/MM/yyyy HH:mm" }}
                     </span>
-                    <!-- <button cButton color="danger">
-                    </button> -->
-                  </div>
-                  <hr class="mb-4" />
-                  <app-pedido-new-form
-                    (FormsValues)="FormsValues($event)"
-                    [Clientes]="Clientes"
-                    [MetodosPagos]="MetodosPagos"
-                    [Productos]="Productos"
-                    [Servicios]="Servicios"
-                    [PedidoDetail]="empFactura"
-                    (ActualizarProductos)="ActualizarProductos($event)"
-                    [EmpleadoId]="numberValue(empleado.id)"
-                    (TienePago)="actualizarEstadoPago($event, j)"
-                  ></app-pedido-new-form>
+                  </button>
                 </div>
-              </c-col>
-            </c-row>
+
+                <div
+                  [attr.id]="'collapse-' + empleado.id + '-' + j"
+                  class="accordion-collapse collapse"
+                  [attr.aria-labelledby]="'heading-' + empleado.id + '-' + j"
+                >
+                  <div class="accordion-body">
+                    <div
+                      class="small text-body-secondary mt-2 border p-4"
+                      [class.hasPago]="
+                        validarEstadoPago(j, numberValue(empleado.id))
+                      "
+                      [class.notHasPago]="
+                        !validarEstadoPago(j, numberValue(empleado.id))
+                      "
+                    >
+                      <!-- <hr class="mb-4" /> -->
+                      <app-pedido-new-form
+                        (FormsValues)="FormsValues($event)"
+                        [Clientes]="Clientes"
+                        [MetodosPagos]="MetodosPagos"
+                        [Productos]="Productos"
+                        [Servicios]="Servicios"
+                        [PedidoDetail]="empFactura"
+                        (ActualizarProductos)="ActualizarProductos($event)"
+                        [EmpleadoId]="numberValue(empleado.id)"
+                        (TienePago)="actualizarEstadoPago($event, j)"
+                      ></app-pedido-new-form>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </c-container>
         </c-card-body>
         <!-- Botón flotante dentro de la pestaña -->
@@ -116,4 +142,18 @@
       </c-tab-panel>
     </c-tabs-content>
   </c-tabs>
+</c-card>
+
+<c-card *ngIf="loaderEmpleados">
+  <c-card-body>
+    <c-container [fluid]="true" class="my-table-full px-0 text-center">
+      <c-row class="mb-4">
+        <c-col>
+          <div class="small text-body-secondary mt-3">
+            <span class="h4"> Cargando <c-spinner size="sm" /></span>
+          </div>
+        </c-col>
+      </c-row>
+    </c-container>
+  </c-card-body>
 </c-card>
