feat: implementar acordeones en componentes de factura y optimizar estilos de acordeón

--- a/src/app/pages/factura/factura-editar/factura-editar.component.html
+++ b/src/app/pages/factura/factura-editar/factura-editar.component.html
@@ -26,79 +26,61 @@
         </c-card-header>
         <c-card-body class="pt-4">
           <c-container [fluid]="true" class="px-0">
-            <div
-              class="accordion"
-              [attr.id]="'accordion-' + Factura.empleado_id"
-            >
-              <div
-                class="accordion-item"
+            <c-accordion [alwaysOpen]="true">
+              <ng-container
                 *ngFor="
                   let facturaDetail of Factura.factura_detalle;
                   let j = index
                 "
               >
-                <div
-                  [attr.id]="'heading-' + Factura.empleado_id + '-' + j"
-                  class="d-flex justify-content-between align-items-center accordion-header"
-                >
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    [attr.data-bs-toggle]="'collapse'"
-                    [attr.data-bs-target]="
-                      '#collapse-' + Factura.empleado_id + '-' + j
-                    "
-                    [attr.aria-expanded]="'false'"
-                    [attr.aria-controls]="
-                      'collapse-' + Factura.empleado_id + '-' + j
-                    "
-                    [ngClass]="{
-                      hasPago: validarEstadoPago(
-                        j,
-                        numberValue(Factura.empleado_id)
-                      ),
-                      notHasPago: !validarEstadoPago(
-                        j,
-                        numberValue(Factura.empleado_id)
-                      )
-                    }"
-                  >
-                    <div class="d-flex align-items-center">
-                      <p class="h5 text-info">
-                        {{ j + 1 }} - {{ facturaDetail.cliente?.nombre }}
-                        {{ facturaDetail.cliente?.apellido }}
-                      </p>
-                      <span
-                        class="ms-3 pointer"
-                        (click)="
-                          eliminarFacturaDetalle(
-                            facturaDetail,
-                            numberValue(Factura.empleado_id)
-                          )
-                        "
+                <c-accordion-item #item="cAccordionItem" [visible]="false">
+                  <ng-template cTemplateId="accordionHeaderTemplate">
+                    <button
+                      (click)="item.toggleItem()"
+                      [collapsed]="!item.visible"
+                      cAccordionButton
+                      class="w-100 text-start"
+                      [class.hasPago]="
+                        validarEstadoPago(j, numberValue(Factura.empleado_id))
+                      "
+                      [class.notHasPago]="
+                        !validarEstadoPago(j, numberValue(Factura.empleado_id))
+                      "
+                    >
+                      <div
+                        class="d-flex justify-content-between align-items-center w-100"
                       >
-                        <svg
-                          cIcon
-                          height="18"
-                          class="text-danger"
-                          name="cil-trash"
-                        ></svg>
-                      </span>
-                    </div>
-                    <span class="ms-3 text-muted">
-                      <strong>Fecha:</strong>
-                      {{ Factura.created_at | date : "dd/MM/yyyy HH:mm" }}
-                    </span>
-                  </button>
-                </div>
-                <div
-                  [attr.id]="'collapse-' + Factura.empleado_id + '-' + j"
-                  class="accordion-collapse collapse"
-                  [attr.aria-labelledby]="
-                    'heading-' + Factura.empleado_id + '-' + j
-                  "
-                >
-                  <div class="accordion-body">
+                        <div class="d-flex align-items-center">
+                          <p class="h5 text-info mb-0">
+                            {{ j + 1 }} - {{ facturaDetail.cliente?.nombre }}
+                            {{ facturaDetail.cliente?.apellido }}
+                          </p>
+                          <span
+                            class="ms-3 pointer"
+                            (click)="
+                              eliminarFacturaDetalle(
+                                facturaDetail,
+                                numberValue(Factura.empleado_id)
+                              );
+                              $event.stopPropagation()
+                            "
+                          >
+                            <svg
+                              cIcon
+                              height="18"
+                              class="text-danger"
+                              name="cil-trash"
+                            ></svg>
+                          </span>
+                        </div>
+                        <span class="me-3 text-muted">
+                          <strong>Fecha:</strong>
+                          {{ Factura.created_at | date : "dd/MM/yyyy HH:mm" }}
+                        </span>
+                      </div>
+                    </button>
+                  </ng-template>
+                  <ng-template cTemplateId="accordionBodyTemplate">
                     <div
                       class="small text-body-secondary mt-2 border p-4"
                       [class.hasPago]="
@@ -120,10 +102,10 @@
                         (TienePago)="actualizarEstadoPago($event, j)"
                       ></app-pedido-new-form>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+                  </ng-template>
+                </c-accordion-item>
+              </ng-container>
+            </c-accordion>
           </c-container>
         </c-card-body>
       </c-tab-panel>
