--- a/src/app/pages/factura/factura-insertar2/factura-insertar2.component.html
+++ b/src/app/pages/factura/factura-insertar2/factura-insertar2.component.html
@@ -43,65 +43,55 @@
         </c-card-header>
         <c-card-body class="pt-4">
           <c-container [fluid]="true" class="px-0">
-            <div class="accordion" [attr.id]="'accordion-' + empleado.id">
-              <div
-                class="accordion-item"
+            <c-accordion [alwaysOpen]="true">
+              <ng-container
                 *ngFor="let empFactura of empleado.facturas?.[0]?.factura_detalle || []; let j = index"
               >
-                <div
-                  [attr.id]="'heading-' + empleado.id + '-' + j"
-                  class="d-flex justify-content-between align-items-center accordion-header"
-                >
-                  <button
-                    class="accordion-button collapsed"
-                    type="button"
-                    [attr.data-bs-toggle]="'collapse'"
-                    [attr.data-bs-target]="'#collapse-' + empleado.id + '-' + j"
-                    [attr.aria-expanded]="'false'"
-                    [attr.aria-controls]="'collapse-' + empleado.id + '-' + j"
-                    [ngClass]="{
-                      hasPago: validarEstadoPago(j, numberValue(empleado.id)),
-                      notHasPago: !validarEstadoPago(
-                        j,
-                        numberValue(empleado.id)
-                      )
-                    }"
-                  >
-                    <div class="d-flex align-items-center">
-                      <p class="h5 text-info">
-                        Cliente: {{ empFactura.cliente?.nombre }}
-                        {{ empFactura.cliente?.apellido }}
-                      </p>
-                      <span
-                        class="ms-3 pointer"
-                        (click)="
-                          eliminarFacturaDetalle(
-                            empFactura,
-                            numberValue(empleado.id)
-                          )
-                        "
-                      >
-                        <svg
-                          cIcon
-                          height="18"
-                          class="text-danger"
-                          name="cil-trash"
-                        ></svg>
+                <c-accordion-item #item="cAccordionItem" [visible]="false">
+                  <ng-template cTemplateId="accordionHeaderTemplate">
+                    <button
+                      (click)="item.toggleItem()"
+                      [collapsed]="!item.visible"
+                      cAccordionButton
+                      class="w-100 text-start d-flex justify-content-between align-items-center"
+                      [ngClass]="{
+                        hasPago: validarEstadoPago(j, numberValue(empleado.id)),
+                        notHasPago: !validarEstadoPago(
+                          j,
+                          numberValue(empleado.id)
+                        )
+                      }"
+                    >
+                      <div class="d-flex align-items-center">
+                        <p class="h5 text-info">
+                          Cliente: {{ empFactura.cliente?.nombre }}
+                          {{ empFactura.cliente?.apellido }}
+                        </p>
+                        <span
+                          class="ms-3 pointer"
+                          (click)="
+                            eliminarFacturaDetalle(
+                              empFactura,
+                              numberValue(empleado.id)
+                            );
+                            $event.stopPropagation()
+                          "
+                        >
+                          <svg
+                            cIcon
+                            height="18"
+                            class="text-danger"
+                            name="cil-trash"
+                          ></svg>
+                        </span>
+                      </div>
+                      <span class="mr-3 text-muted">
+                        <strong>Fecha:</strong>
+                        {{ empFactura.created_at | date : "dd/MM/yyyy HH:mm" }}
                       </span>
-                    </div>
-                    <span class="ms-3 text-muted">
-                      <strong>Fecha:</strong>
-                      {{ empFactura.created_at | date : "dd/MM/yyyy HH:mm" }}
-                    </span>
-                  </button>
-                </div>
-
-                <div
-                  [attr.id]="'collapse-' + empleado.id + '-' + j"
-                  class="accordion-collapse collapse"
-                  [attr.aria-labelledby]="'heading-' + empleado.id + '-' + j"
-                >
-                  <div class="accordion-body">
+                    </button>
+                  </ng-template>
+                  <ng-template cTemplateId="accordionBodyTemplate">
                     <div
                       class="small text-body-secondary mt-2 border p-4"
                       [class.hasPago]="
@@ -111,7 +101,6 @@
                         !validarEstadoPago(j, numberValue(empleado.id))
                       "
                     >
-                      <!-- <hr class="mb-4" /> -->
                       <app-pedido-new-form
                         (FormsValues)="FormsValues($event)"
                         [Clientes]="Clientes"
@@ -124,10 +113,10 @@
                         (TienePago)="actualizarEstadoPago($event, j)"
                       ></app-pedido-new-form>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+                  </ng-template>
+                </c-accordion-item>
+              </ng-container>
+            </c-accordion>
           </c-container>
         </c-card-body>
         <!-- Botón flotante dentro de la pestaña -->
