--- a/src/app/pages/factura/factura-insertar2/factura-insertar2.component.scss
+++ b/src/app/pages/factura/factura-insertar2/factura-insertar2.component.scss
@@ -33,6 +33,11 @@
   // color: #03990b !important;
 }
 
+.pagoSinCompletar {
+  background-color: #703838 !important;
+  // color: #c0392b !important; // Rojo para el texto si lo necesitas
+}
+
 .notHasPago {
   background-color: transparent !important;
   color: #212529;
